--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <h2>Pick a Color</h2>
     <input type="color" id="colorInput" value="#FF0000" />
     <div id="colorDisplay">Selected: #FF0000</div>
-    <button onclick="sendColor()">Send to App</button>
+    <button onclick="sendColor()">Confirm the Color</button>
 
     <script>
       const colorInput = document.getElementById("colorInput");
