--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     // Listener for "message" events (simulated app response)
     window.addEventListener("message", function (event) {
       log.innerHTML = `<p><strong>📩 Received message:</strong> ${event.data}</p>`;
-      console.log(log.innerHTML)
+      console.log('abcd');
     });
 
     // colorInput.addEventListener("input", () => {
