--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
     //   colorDisplay.textContent = `Selected: ${hex}`;
     // });
 
-    function sendColor() {
-      const hex = colorInput.value.toUpperCase();
-      const message = JSON.stringify({ color: hex });
-      window.ReactNativeWebView.postMessage(message);
-    }
+    // function sendColor() {
+    //   const hex = colorInput.value.toUpperCase();
+    //   const message = JSON.stringify({ color: hex });
+    //   window.ReactNativeWebView.postMessage(message);
+    // }
 
     // Simulate initial WebView test message
     // window.onload = function () {
